--- a/configure.in
+++ b/configure.in
@@ -13,6 +13,7 @@ AC_PROG_YACC
 AC_PROG_CC
 AM_PROG_INSTALL
 AC_PROG_LN_S
+AC_PROG_RANLIB
 
 dnl Checks the Compiler.
 AM_C_PROTOTYPES
@@ -57,4 +58,4 @@ AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
 AM_FUNC_MKTIME
 AM_FUNC_OBSTACK
 
-AC_OUTPUT([Makefile doc/Makefile src/Makefile])
+AC_OUTPUT([Makefile doc/Makefile lib/Makefile src/Makefile])
