--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,9 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 noinst_LIBRARIES = liboleo.a
 
-liboleo_a_SOURCES = getdate.y getopt.c getopt1.c
+liboleo_a_SOURCES = getdate.y getopt.c getopt1.c xmalloc.c error.c \
+	random.c
 
-noinst_HEADERS = getopt.h
+noinst_HEADERS = getopt.h error.h
 
 liboleo_a_LIBADD = 
 liboleo_a_DEPENDENCIES = $(libfu_a_LIBADD)
