Add libintl.h for XMalloc, and Modify Configure.in to look for gtk.

--- a/config.h.in
+++ b/config.h.in
@@ -134,6 +134,15 @@
 /* Define if you have the X11 library (-lX11).  */
 #undef HAVE_LIBX11
 
+/* Define if you have the gdk library (-lgdk).  */
+#undef HAVE_LIBGDK
+
+/* Define if you have the glib library (-lglib).  */
+#undef HAVE_LIBGLIB
+
+/* Define if you have the gtk library (-lgtk).  */
+#undef HAVE_LIBGTK
+
 /* Define if you have the m library (-lm).  */
 #undef HAVE_LIBM
 
