Modify src/Makefile.am so X-Include directory isn't iterated twice Begin creating gtk window in src/io-term.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,5 +26,5 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
 
 oleo_LDADD = ../lib/liboleo.a
 
-INCLUDES = $(X_CFLAGS)
+#INCLUDES = $(X_CFLAGS)
 
