Move GTK functions to src/io-gtk.c
Make Help menu conformant with GNOME

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
  hash.c panic.c line.c key.c format.c funcs.c \
  ir.c io-curses.c font.c display.c print.c init.c \
  sylk.c oleofile.c sc.c list.c busi.c string.c cells.c \
- cmd.c basic.c args.c \
+ cmd.c basic.c args.c io-gtk.c \
  stub.c input.c info.c help.c graph.c forminfo.c \
  posixtm.y date.c xrdb.c
 
