Begin internationalization of Oleo.  Update README file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 AUTOMAKE_OPTIONS = gnits 1.2d
 
-SUBDIRS = doc lib src
+SUBDIRS = doc lib src po intl
 
 release:
 	$(MAKE) dist distdir=$(PACKAGE)`date +"%y%m%d"`
