--- a/configure.in
+++ b/configure.in
@@ -84,4 +84,4 @@ AM_FUNC_OBSTACK
 dnl See if we're GNU Gettext friendly
 AM_GNU_GETTEXT
 
-AC_OUTPUT([Makefile doc/Makefile lib/Makefile src/Makefile intl/Makefile po/Makefile.in], [sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
+AC_OUTPUT([Makefile oleobug doc/Makefile lib/Makefile src/Makefile intl/Makefile po/Makefile.in], [sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
