--- a/config.h.in
+++ b/config.h.in
@@ -226,6 +226,9 @@
 /* Define if you have the X11 library (-lX11).  */
 #undef HAVE_LIBX11
 
+/* Define if you have the Xext library (-lXext).  */
+#undef HAVE_LIBXEXT
+
 /* Define if you have the gdk library (-lgdk).  */
 #undef HAVE_LIBGDK
 
