--- a/configure.in
+++ b/configure.in
@@ -24,6 +24,12 @@ AC_PROG_RANLIB
 dnl Checks the Compiler.
 AM_C_PROTOTYPES
 
+if test "x$GCC" = "xyes"; then
+  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`"; then
+    CFLAGS="$CFLAGS -Wall"
+  fi
+fi
+
 dnl Checks for libraries.
 dnl Replace `main' with a function in -lncurses:
 AC_CHECK_LIB(ncurses, main, ,
@@ -43,6 +49,20 @@ LIBS="$LIBS $X_LIBS"
 dnl Checks for X11 Libraries
 AC_CHECK_LIB(X11, main)
 
+dnl Checks if -DDEBUG is requested
+AC_ARG_WITH(debug,
+[  --with-debug                   Send debugging info to stderr],
+[              case "${withval}" in
+                 y | ye | yes )         usedebug=yes ;;
+                 n | no )               usedebug=no ;;
+                 * )                    usedebug=yes ;;
+               esac],
+[              with_debug=no])
+
+if test $with_debug = yes; then
+	CFLAGS="$CFLAGS -DDEBUG"
+fi
+           
 dnl Checks for GTK
 AC_ARG_WITH(gtk,
 [  --without-gtk		  Do not use GTK, even if detected],
@@ -54,9 +74,10 @@ AC_ARG_WITH(gtk,
 [		with_gtk=yes])
 
 if test $with_gtk = yes; then
+	AC_CHECK_LIB(Xext, main)
 	AC_CHECK_LIB(glib, main, ,-lgtk -lgdk)
-	AC_CHECK_LIB(gtk, main, , ,-lglib -lgdk) 
-	AC_CHECK_LIB(gdk, main, , ,-lglib -lgdk)
+	AC_CHECK_LIB(gdk, main, , ,-lglib -lgdk) 
+	AC_CHECK_LIB(gtk, main, , ,-lglib -lgdk)
 fi
 
 dnl Checks for header files.
