--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -104,11 +104,7 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  input.h io-abstract.h io-curses.h io-edit.h io-generic.h io-term.h \
  io-utils.h io-x11.h ir.h key.h line.h lists.h node.h oleofile.h \
  panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
- sysdef.h utils.h window.h list.h ir.h io-gtk.h
-
-# oleo_LDADD = $(X_PRE_LIBS) $(X_LIBS) -lX11
-#oleo_LDADD = $(X_PRE_LIBS) $(X_LIBS)
-# oleo_LDADD = @LIBOBJS@
+ sysdef.h utils.h window.h list.h ir.h io-gtk.h sort.h
 
 oleo_LDADD = ../lib/liboleo.a
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -467,8 +463,6 @@ install-data install uninstall all installdirs mostlyclean-generic \
 distclean-generic clean-generic maintainer-clean-generic clean \
 mostlyclean distclean maintainer-clean
 
-
-#INCLUDES = $(X_CFLAGS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
